# flappy-tub

./: README.md  V3_Proto  pyproject.toml
.github/workflows/: flappy-tub.yml
flaps/: flap.css  flap.html  flap.js  index.html
server/: server.py
