[tool.poetry]
name = "flappy-tub"
version = "0.1.0"
description = "A game about hot tubs and hard flaps"
authors = ["Ben West <ben.west.500@gmail.com>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
